Minor bug fix added row gap to menu class
This is because when shrinking the screen the img menu tends to wrap,
without it the images are right next to each other vertically.

--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ h1,p {
 	flex-wrap: wrap;
 	text-align: center;
 	justify-content: space-between;
+	row-gap: 16px;
 }
 
 .menu-item {
